# mnist

./: .gitignore  .pyproject.toml.swp  .run.sh.swp  Dockerfile  README.md  ml-work-cronjob  pyproject.toml  run.sh  run_worker.sh
note/: CNN.ipynb  mnist-predict.ipynb  mnist240924.keras:RVContext  mnist240924.keras:Zone.Identifier  mnist984.h5  mnist984.keras
src/mnist/: .db.py.swp  .dp.py.swp  .worker.py.swp  cli.py  db.py  main.py  model.py  worker.py
tests/: test_predict.py  test_worker.py
