[project]
name = "mnist"
version = "0.1.0"
description = "MNIST"
authors = [
    {name = "dMario24", email = "data.mario24@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GNU"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
